src/test/deca/syntax/valid/our_tests/jb-UnaryExpr-simple.deca
// Description:
//    UnaryExpr valid
//
// Resultats:
//    Ligne 11: Expression unaire
// 
// Historique:
//    cree le 18/01/2017

{
println(-3);
}
